--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ContentGroup.jspf
@@ -53,7 +53,7 @@
 		<tr:iterator var="subject" value="#{ViewItemFull.pubItem.metadata.subjects}" binding="#{ViewItemFull.subjectIterator}" varStatus="index">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText id="lblEditItem_lblDDCSubject" value="#{lbl.EditItem_lblDDCSubject}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText id="lblEditItem_lblDDCSubject" value="#{lbl.ViewItemFull_lblDDCSubject}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText id="txtDDCSubject" value="#{subject.value}" converter="HTMLEscapeConverter" escape="false"/>
